@@ -1,3 +1,9 @@
+2011-02-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/mcs51/gen.c,
+	  src/z80/peeph-z80.def:
+	  Merge from trunk.
+
 2011-02-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80/ralloc2.cc,
